plugins {
    id 'maven-publish'
    id 'com.enonic.defaults' version '2.1.5'
    id 'com.enonic.xp.app' version '3.6.1'
}

app {
    name = "${appName}"
    displayName = "${appDisplayName}"
    vendorName = "${vendorName}"
    vendorUrl = "${vendorUrl}"
    systemVersion = "${xpVersion}"
}

dependencies {
    implementation "com.enonic.xp:core-api:${xpVersion}"
    implementation "com.enonic.xp:portal-api:${xpVersion}"
    include "com.enonic.xp:lib-auth:${xpVersion}"
    include "com.enonic.xp:lib-common:${xpVersion}"
    include "com.enonic.xp:lib-context:${xpVersion}"
    include "com.enonic.xp:lib-portal:${xpVersion}"
    include "com.enonic.xp:lib-cluster:${xpVersion}"
    include "com.enonic.lib:lib-http-client:3.2.2"

    include 'com.auth0:java-jwt:4.5.0'
    include 'com.auth0:jwks-rsa:0.22.1'

    testImplementation "com.enonic.xp:testing:${xpVersion}"
}

repositories {
    mavenCentral()
    xp.enonicRepo('dev')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
